# hypertransparency

./: .gitignore  README.md  pyproject.toml
demo/data/: image-versions.json  images.json  manifest.json  messages-001.json
docs/: chat.html  index.html
docs/data/: artifacts.json  commits.json  image-versions.json  images.json  index.json  manifest.json  messages-001.json
src/: __init__.py  builder.py  cli.py
templates/: chat.html
templates/hooks/: post-session.sh
